# tabicl-gs

./: .gitignore  AGENTS.md  README.md  TabICLv2.md  pyproject.toml
docs/: abstract_intro_cn_draft.md  additional_results_analyses_from_current_outputs.md  discussion_cn_draft.md  methods_cn_draft.md  paper_framework.md  paper_outline_54_prior_integrated_foundation_model_cn.md  paper_title_abstract_intro_gb_cn_draft.md  results_1_4_cn_draft.md  results_outline_54_decoupled.md  sample_size_triple_vs_baselines_6traits_cn.md  snp_count_results_discussion_en_draft.md
r/: run_baseline.R  run_gblup_h2.R
scripts/: backfill_baseline_inner_oof.py  backfill_tabicl_inner_oof_from_best_block.py  build_best_block_feature_cache.py  build_results_support_workbook.py  compare_decoupled_weight_schemes.py  compare_tabicl_variants.py  eval_prior_only_from_dual_outputs.py  eval_single_prior_only_from_outputs.py  eval_triple_prior_only_from_outputs.py  export_figure2_tables.py  plot_alt_chart_type_previews.py  plot_figure2_main_results.R  plot_figure2_main_results_py.py  plot_figures_1_3_4_5_6_py.py  prepare_multi_dataset_plink_cache.py  prepare_rice529_plink.py  prepare_rice529_plink_cache.py  run_54_duli_liudang_baseline_server_gpu1.sh  run_54_duli_liudang_full_server_gpu1.sh  run_54_duli_liudang_fusion_server_gpu1.sh  run_54_duli_liudang_noprior_server_gpu1.sh  run_54_marker_count_decoupled_full_server_gpu1.sh  run_54_marker_count_decoupled_trait.py  run_54_sample_size_decoupled_full_server_gpu1.sh  run_54_sample_size_decoupled_trait.py  run_54_tabpfn_10k_8traits_server_gpu1.sh  (+39 more)
(+145 files in other folders)
